# Genesis-Os

./: GENESIS-OS-EMBRACE YOUR AURA!  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
collab-canvas/: build.gradle.kts
collab-canvas/src/main/cpp/: CMakeLists.txt
colorblendr/: build.gradle.kts
core-module/: build.gradle.kts
datavein-oracle-native/: build.gradle.kts
datavein-oracle-native/src/main/cpp/: CMakeLists.txt
feature-module/: build.gradle.kts
gradle/: automation.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
module-a/: build.gradle.kts
module-b/: build.gradle.kts
module-c/: build.gradle.kts
module-d/: build.gradle.kts
module-e/: build.gradle.kts
module-f/: build.gradle.kts
oracle-drive-integration/: build.gradle.kts
oracle-drive-integration/src/main/cpp/: CMakeLists.txt
romtools/: build.gradle.kts
sandbox-ui/: build.gradle.kts
secure-comm/: build.gradle.kts
